tests/ui/reject_generics.stderr
error: #[pyclass] cannot have generic parameters
 --> $DIR/reject_generics.rs:4:25
  |
4 | struct ClassWithGenerics<A> {
  |                         ^^^
